# cov-badge

./: .gitignore  CHANGELOG.md  README.md  coverage.json  justfile  pyproject.toml
src/cov_badge/: __init__.py
tests/: conftest.py  test_app.py
