[project]
name = "cov-badge"
version = "0.1.0"
description = "cov-badge creates a coverage badge from a pytest-cov JSON file, and adds it to your project's README"
readme = "README.md"
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.14.1",
    "typer>=0.25.1",
]

[project.scripts]
cov-badge = "cov_badge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = ["--doctest-modules"]

[tool.ruff.lint]
select = ["F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
]
