[project]
name = "cov-badge"
version = "0.1.0"
description = "cov-badge creates a coverage badge from a pytest-cov JSON file, and adds it to your project's README"
readme = "README.md"
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
cov-badge = "cov_badge:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = ["--doctest-modules"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.tox]
env_list = [
    "py312",
    "py313",
    "py314",
    "min-deps",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
commands = [["pytest", "{posargs}"]]

[tool.tox.env.min-deps]
base_python = "py312"
deps = [
    "pydantic-settings==2.0.0",
    "typer==0.12.0",
    "rich==13.0.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "tox>=4.55.0",
    "tox-uv>=1.35.2",
]
