[project]
name = "cov-badge"
version = "0.1.1"
description = "A CLI tool that generates a Shields.io coverage badge and inserts it into your README.md automatically."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
keywords = ["coverage", "badge", "pytest", "readme"]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/fourtreestech/cov-badge"  # update to your actual URL
Issues = "https://github.com/fourtreestech/cov-badge/issues"
Changelog = "https://github.com/fourtreestech/cov-badge/blob/main/CHANGELOG.md"

[project.scripts]
cov-badge = "cov_badge:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.tox]
env_list = [
    "py312",
    "py313",
    "py314",
    "min-deps",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
commands = [["pytest", "{posargs}"]]

[tool.tox.env.min-deps]
base_python = "py312"
deps = [
    "pydantic-settings==2.0.0",
    "typer==0.12.0",
    "rich==13.0.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "tox>=4.55.0",
    "tox-uv>=1.35.2",
]
